--- a/index.html
+++ b/index.html
@@ -38,16 +38,25 @@
       max-width: 100%;
       border: 1px solid #ccc;
     }
+    #status {
+      margin-top: 1rem;
+      font-weight: bold;
+      color: green;
+    }
   </style>
 </head>
 <body>
   <h2>📐 Image Resizer</h2>
   <input type="file" id="upload" accept="image/*" />
   <label>Resize Percentage:
-    <input type="number" id="percent" value="100" min="1" max="500" />
+    <input type="number" id="percent" value="50" min="1" max="500" />
+  </label>
+  <label>JPEG Quality (0.1–1.0):
+    <input type="number" id="quality" value="0.7" step="0.1" min="0.1" max="1.0" />
   </label>
   <button onclick="resizeImage()">Resize</button>
   <button onclick="downloadImage()">Download</button>
+  <div id="status"></div>
   <canvas id="canvas"></canvas>
 
   <script>
@@ -62,6 +71,7 @@
         originalWidth = img.width;
         originalHeight = img.height;
         drawImage(originalWidth, originalHeight);
+        document.getElementById('status').textContent = "Image loaded.";
       };
       img.src = URL.createObjectURL(file);
     };
@@ -71,6 +81,7 @@
       const newWidth = originalWidth * percent / 100;
       const newHeight = originalHeight * percent / 100;
       drawImage(newWidth, newHeight);
+      document.getElementById('status').textContent = `Resized to ${newWidth}×${newHeight}px`;
     }
 
     function drawImage(w, h) {
@@ -84,10 +95,12 @@
 
     function downloadImage() {
       const canvas = document.getElementById('canvas');
+      const quality = parseFloat(document.getElementById('quality').value);
       const link = document.createElement('a');
-      link.download = 'resized-image.png';
-      link.href = canvas.toDataURL();
+      link.download = 'resized-image.jpg';
+      link.href = canvas.toDataURL('image/jpeg', quality);
       link.click();
+      document.getElementById('status').textContent = "Image downloaded.";
     }
   </script>
 </body>
