--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Image Resizer</title>
+  <title>Smart Image Resizer</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -15,9 +15,9 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h2 { margin-bottom: 1rem; }
-    input, button {
-      display: block;
-      margin: 0.5rem 0;
+    label { display: block; margin-top: 1rem; }
+    input, select, button {
+      margin-top: 0.5rem;
       padding: 0.5rem;
       font-size: 1rem;
       border: 1px solid #ccc;
@@ -46,16 +46,27 @@
   </style>
 </head>
 <body>
-  <h2>📐 Image Resizer</h2>
+  <h2>📐 Smart Image Resizer</h2>
   <input type="file" id="upload" accept="image/*" />
+  
   <label>Resize Percentage:
     <input type="number" id="percent" value="50" min="1" max="500" />
   </label>
-  <label>JPEG Quality (0.1–1.0):
-    <input type="number" id="quality" value="0.7" step="0.1" min="0.1" max="1.0" />
+  
+  <label>Image Format:
+    <select id="format">
+      <option value="jpeg">JPEG</option>
+      <option value="webp">WebP</option>
+    </select>
   </label>
+  
+  <label>Quality (0.1–1.0):
+    <input type="number" id="quality" value="0.6" step="0.1" min="0.1" max="1.0" />
+  </label>
+  
   <button onclick="resizeImage()">Resize</button>
   <button onclick="downloadImage()">Download</button>
+  
   <div id="status"></div>
   <canvas id="canvas"></canvas>
 
@@ -95,12 +106,14 @@
 
     function downloadImage() {
       const canvas = document.getElementById('canvas');
+      const format = document.getElementById('format').value;
       const quality = parseFloat(document.getElementById('quality').value);
+      const mime = format === 'webp' ? 'image/webp' : 'image/jpeg';
       const link = document.createElement('a');
-      link.download = 'resized-image.jpg';
-      link.href = canvas.toDataURL('image/jpeg', quality);
+      link.download = `resized-image.${format}`;
+      link.href = canvas.toDataURL(mime, quality);
       link.click();
-      document.getElementById('status').textContent = "Image downloaded.";
+      document.getElementById('status').textContent = `Downloaded as ${format.toUpperCase()} with quality ${quality}`;
     }
   </script>
 </body>
